# qsx-strategy-score

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
app/: streamlit_app.py
chrome-extension/: .webstoreignore  README.md  content.js  manifest.json  popup.css  popup.html  popup.js  smart-cta.js  styles.css
chrome-store-assets/: STORE_LISTING_CHECKLIST.md
docs/: calibration.md  case-studies.md  chrome-web-store-v1.2.0.md  chrome-web-store-v1.3.0.md  chrome-web-store-v1.3.1.md  chrome-web-store-v1.3.2.md  methodology.md  overlay.md  privacy.md  release-governance.md  scoring.md
examples/: make_samples.py  sample_equity.csv  sample_flagged.csv  sample_returns.csv  strategy_alpha.csv  strategy_beta.csv
qsx_strategy_score/: __init__.py  asset_library.py  assets.py  cli.py  coaching.py  i18n.py  io.py  metrics.py  overlay_client.py  profiles.py  report.py  report_preflight.py  scoring.py  triage.py
scripts/: generate_readme_assets.py  package_chrome_extension.sh  prelaunch_audit.py
tests/: test_free_core.py
